--- a/pages/home.html
+++ b/pages/home.html
@@ -3,5 +3,5 @@
 <main>
     <h1>Explore o universo</h1>
 
-    <button  onclick="router.redirect()">QUERO SABER MAIS</button>
+    <a class="redirect" href="/universe" onclick="route()">QUERO SABER MAIS</a>
 </main>
