melhora no redirecionamento

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>SPA Universo</title>
 </head>
-<body>
+<body class="my-body">
     <nav>
      <img src="assets/galaxy.svg" alt="galáxia">
 
